feat(reports): add reports crud page

--- a/publico/detalleInmueble.html
+++ b/publico/detalleInmueble.html
@@ -9,7 +9,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="../css/bootstrap.min.css" >
-    <link rel="stylesheet" href="../css/cssDetalleInmueble_Privado.css" >
+    <link rel="stylesheet" href="../css/cssStyles.css" >
 
     <title>Hello, world!</title>
   </head>
