creación de páginas sobre nosotros, terminos y condiciones y faq

--- a/MUNEG/index.html
+++ b/MUNEG/index.html
@@ -96,7 +96,7 @@
         <div class="offcanvas-body" id="fondo">
           <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
             <li class="nav-item">
-              <a class="nav-link" href="#"><img src="img/person_30px.png">Sobre Nostros</a>
+              <a class="nav-link" href="#"><img src="img/person_30px.png">Sobre Nosotros</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#"><img src="img/poll_30px.png">Preguntas Frecuentes</a>
@@ -124,6 +124,7 @@
 </header>
 
 <body>
+  
 
 
 
