fix(detalleInmueble-page): arregar carrousel y titulos

--- a/publico/detalleInmueble.html
+++ b/publico/detalleInmueble.html
@@ -25,8 +25,8 @@
             </div>
             <!-- informacion detallada de casa -->
             <div id="houseInformactionContainer" class="col-6 ">
-                    <h3>Calle al volcan km 16, Santa Tecla</h3>
-                    <p>Amueblado 3 dormitorios 3 baños</p>
+                    <h3 class="direccionPropiedad">Calle al volcan km 16, Santa Tecla</h3>
+                    <p class="detallesPropiedad">Amueblado 3 dormitorios 3 baños</p>
     
                     <div class="row justify-content-around">
                     <div id="carouselExampleControls" class="carousel slide carrouselContainer" data-bs-ride="carousel" >
